using SequenceGenerator instead of hibernate Generator (#563)
* using SequenceGenerator instead of hibernate Generator

* removes unnecessary properties

* polish code